# graphviz-mindmaps

./: .gitignore  Makefile  README.md  fontawesome-codes.html  fontawesome-codes.md  fontawesome.py  galacfg.py  galacomm.py  galainot.py  galapix.cfg  galaview.sh  gvmm-create-mm.py  gvmm-create-mm.sh  gvmm-exe.py  gvmm-target-make.py  gvmm-target-make.sh  gvmm.py  gvmm_helpers.py  montage.py  montage_next.py  montit.py  pyproject.toml  votl.vim  whiteboard-watch.py
fzf/: gvp.sh  gvw.sh
galapix/: Dockerfile  amdgpu-install-21.50.50000-1.el7.noarch.rpm  docker-galapix-shell.sh  docker-galapix.sh  galapix-0.1.3-1.el7.x86_64.rpm
galapix-docker/: Dockerfile  docker-galapix-shell.sh  docker-galapix.sh
galapix/my-improved/: galapix.sdl
galapix/ubuntu-2204-compiled/: galapix.sdl
galapix/ubuntu-2404-compiled/: galapix.sdl
graphviz_mindmaps/: __init__.py  cli.py  config.py  constants.py  fontawesome.py  helpers.py  theme.py
graphviz_mindmaps/assets/fontawesome/: LICENSE.txt
graphviz_mindmaps/commands/: __init__.py  copy_mm.py  create.py  create_mm.py  mm_files.py  move_mm.py  target_make.py
graphviz_mindmaps/execute/: __init__.py  image.py  montage.py  restart.py
graphviz_mindmaps/model/: __init__.py  document.py  graph.py  label.py  styles.py
graphviz_mindmaps/parser/: __init__.py  attributes.py  outline.py
graphviz_mindmaps/render/: __init__.py  code_image.py  dot.py  image_transform.py  label_html.py
graphviz_mindmaps/tools/: __init__.py  montage.py  montage_next.py  montage_title.py
quickpic/: QuickPic_4.5.2_SignAligned.apk
rofi-galapix/: rofi_galapixes.sh  rofi_mywhiteboard.sh  rofi_vimwiki_galapixes.sh
templates/: mindmap-01.dot  mindmap-01.otl  montage.cm
templates/Montage/: Makefile  Template.wiki  justfile  mindmap-01.otl  montage-next.yaml  montage.cm  montage.gmm  montage.yml
templates/Single/: Makefile  Template.wiki  justfile  mindmap-01.dot  mindmap-01.otl
tests/: test_execute_image.py  test_render_dot.py
tools/: build_fontawesome_catalog.py  build_wheel_devel.py
xdg/: README.md  galaview.desktop
